# learning_opencv

./: CMakeLists.txt
ch2/display_image/: CMakeLists.txt  main.cpp
ch2/display_video/: CMakeLists.txt  main.cpp
ch2/display_video_with_trackbar/: CMakeLists.txt  main.cpp
ch2/image_transformation_1/: CMakeLists.txt  main.cpp
ch2/image_transformation_2/: CMakeLists.txt  main.cpp
ch2/pixel_values/: CMakeLists.txt  main.cpp
ch2/writing_to_a_file/: CMakeLists.txt  main.cpp
data/videos/: paths.txt
